<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/textView2"
        android:text="@string/forgot_password"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/darker_white"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"/>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/table_background"
        android:paddingVertical="10dp"
        android:paddingRight="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintBottom_toTopOf="@+id/forgot_password_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.65">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:src="@drawable/info_outline"
            app:tint="@color/menu_yellow" />

        <TextView
            android:id="@+id/change_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="left"
            android:text="Введите логин для восстановления пароля."
            android:textColor="@color/_white_divider"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@+id/change_password_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />
    </LinearLayout>

    <EditText
        android:id="@+id/forgot_password_username"
        android:hint="@string/login_login"
        android:textColor="@color/white"
        android:textColorHint="@color/darker_white"
        android:selectAllOnFocus="true"
        android:theme="@style/LoginEditText"
        android:paddingStart="12dp"
        android:paddingVertical="@dimen/edittext_padding_vert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/forgot_password_button"
        android:text="@string/get_secret_question"
        android:textSize="@dimen/text_size"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:enabled="false"
        android:background="@drawable/button"
        android:layout_width="@dimen/small_button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_username" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminateTint="@color/menu_yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_button"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>