...
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/secret_question_answer"
        app:layout_constraintEnd_toEndOf="@+id/secret_question_answer"
        app:layout_constraintStart_toStartOf="@+id/secret_question_answer" />

    <EditText
        android:id="@+id/secret_question_answer"
        android:hint="@string/registration_answer"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.51" />

    <Button
        android:id="@+id/secret_question_button"
        android:text="@string/reset_password"
        android:textSize="@dimen/text_size"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:enabled="false"
        android:background="@drawable/button"
...
