...
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/textView"
        android:text="@string/game_title"
        android:textSize="34dp"
        android:textColor="@color/darker_white"
        android:gravity="center"
        android:background="@drawable/text_background"
        android:layout_width="match_parent"
...
        android:layout_marginRight="70dp"
        app:layout_constraintEnd_toEndOf="@+id/join_button"
        app:layout_constraintStart_toStartOf="@+id/join_button"
        app:layout_constraintTop_toBottomOf="@+id/join_button" />

    <Button
        android:id="@+id/exit_account_button"
        android:text="@string/log_out"
        android:textSize="@dimen/text_size"
        android:textColor="@color/darker_white"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:background="@drawable/button_no_stroke"
...
